# cookobot-navigation

cookobot-navigation/: CMakeLists.txt  package.xml
cookobot-navigation/launch/: cookobot-navigation.launch
cookobot_gazebo/: CMakeLists.txt  package.xml
cookobot_gazebo/launch/: cookobot.launch
cookobot_gazebo/models/Untitled/: model.sdf
cookobot_gazebo/models/all_the_tables_numbers/: model.config  model.sdf
cookobot_gazebo/models/table_number/: model.config  model.sdf
cookobot_gazebo/models/table_number_five/: model.config  model.sdf
cookobot_gazebo/models/table_number_four/: model.config  model.sdf
cookobot_gazebo/models/table_number_one/: model.config  model.sdf
cookobot_gazebo/models/table_number_three/: model.config  model.sdf
cookobot_gazebo/models/table_number_two/: model.config  model.sdf
cookobot_gazebo/robot_description/config/: controllers.yaml  kinematics.yaml  my_first_arm.rviz  pid_gazebo_ros.yaml
cookobot_gazebo/worlds/: restaurant.world  restaurantConCartel.world
maps/: Nombre_del_mapa.map.pgm  Nombre_del_mapa.map.yaml  mapa_restaurante.pgm  restaurant.world  restaurant_map.pgm  tb3_house.map.pgm
mesa_msg/: CMakeLists.txt  package.xml
mesa_msg/srv/: Mesa.srv
my_navigation_stack/: package.xml
my_navigation_stack/config/: my_config.rviz
my_navigation_stack/launch/: my_navigation_launch.launch
navegacionAutonoma/: CMakeLists.txt  package.xml
navegacionAutonoma/launch/: navegacionAutonoma.launch
navegacionAutonoma/src/: navegacion.py
provide_map/: package.xml
provide_map/launch/: provide_map.launch
(+12 files in other folders)
